# wine-quality

./: .gitignore  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
notebooks/: Exploratory data analysis.ipynb
wine_quality/: data.py  model.py  tracking.py  train_pipeline.py
wine_quality/utils/: data.py  metrics.py  model.py
