[tool.poetry]
name = "wine-quality"
version = "0.1.0"
description = ""
authors = ["Cristiano <hello@cristiano.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
mlflow = "^2.6.0"
scikit-learn = "^1.3.0"
pycodestyle = "^2.11.0"
optuna = "^3.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
